// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds a default session from a file 1`] = `
{
  "assemblies": [
    {
      "name": "testAssembly",
      "sequence": {
        "adapter": {
          "twoBitLocation": {
            "locationType": "UriLocation",
            "uri": "test.2bit",
          },
          "type": "testSeqAdapter",
        },
        "trackId": "",
        "type": "testSequenceTrack",
      },
    },
  ],
  "configuration": {},
  "connections": [],
  "defaultSession": {
    "name": "test new session",
    "views": [
      {
        "id": "823WX",
        "tracks": [
          {
            "configuration": "simple",
            "type": "AlignmentsTrack",
          },
        ],
        "type": "LinearGenomeView",
      },
    ],
  },
  "tracks": [],
}
`;

exports[`deletes a default session 1`] = `
{
  "assemblies": [
    {
      "name": "testAssembly",
      "sequence": {
        "adapter": {
          "twoBitLocation": {
            "locationType": "UriLocation",
            "uri": "test.2bit",
          },
          "type": "testSeqAdapter",
        },
        "trackId": "",
        "type": "testSequenceTrack",
      },
    },
  ],
  "configuration": {},
  "connections": [],
  "tracks": [],
}
`;

exports[`fails when default session is not readable 1`] = `"Could not read the provided file"`;

exports[`fails when file does not exist 1`] = `"Could not read the provided file"`;

exports[`fails when file is does not have a default session to read 1`] = `"Could not parse the given default session file"`;

exports[`fails when no necessary default session information is provided 1`] = `"Please provide a --session file"`;
